--- a/APP.KMX/Views/Home/Index.cshtml
+++ b/APP.KMX/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "KMX, convertendo em 1 piscar de olhos as suas coordenadas.";
 }
 
 <form classaction="form-signin" method="post" enctype="multipart/form-data" asp-controller="Home"
@@ -7,7 +7,7 @@
     <div class="text-center mb-6">
         <img class="mb-6" src="/img/logokmx.jpeg" alt="" width="300" height="300">
         <h1 class="h3 mb-6 font-weight-normal">KMX Converter</h1>
-        <p>Carregue seu arquivo XLS e converta para <br> <b>KMX</b> e <b>KMZ</b> <a href="https://caniuse.com/#feat=css-placeholder-shown"></a></p>
+        <p>Carregue seu arquivo XLS e converta para <br> <b>KML</b> e <b>KMZ</b> <a href="https://caniuse.com/#feat=css-placeholder-shown"></a></p>
     </div>
 
     <div class="form-label-group">
@@ -21,7 +21,7 @@
         KMX, convertendo em 1 piscar de olhos as suas coordenadas.
         <br><hr>Ferramenta Compatível com :  <b> Google Earth, Google Mapas e Excel </b> <br><br>
     </label>
-    <button class="btn btn-lg btn-primary btn-block" type="submit" style="background-color:white; color: rebeccapurple; border: solid;" asp-action="" onclick="alert('Estamos em desenvolvimento')">Converter</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" style="background-color:white; color: rebeccapurple; border: solid;" asp-action="" >Converter</button>
     <p class="mt-5 mb-3 text-muted text-center">&copy; 2024</p>
 </form>
 <link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css"> <a id="robbu-whatsapp-button" target="_blank" href="https://api.whatsapp.com/send?phone=556782100953&text=Seja%20bem%20vindo"> <div class="rwb-tooltip">Fale com nosso Suporte</div> <img src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg"> </a>
