--- a/APP.KMX/Views/Home/Index.cshtml
+++ b/APP.KMX/Views/Home/Index.cshtml
@@ -6,22 +6,57 @@
       asp-action="Index">
     <div class="text-center mb-6">
         <img class="mb-6" src="/img/logokmx.jpeg" alt="" width="300" height="300">
-        <h1 class="h3 mb-6 font-weight-normal">KMX Converter</h1>
-        <p>Carregue seu arquivo XLS e converta para <br> <b>KML</b> e <b>KMZ</b> <a href="https://caniuse.com/#feat=css-placeholder-shown"></a></p>
+        <h1 class="h3 mb-6 font-weight-normal"><b>KMX Convert</b></h1>
+    </div>
+    <div class="text-center mb-6">
+        <div class="mb-6">
+            <input type="file" name="file" id="inputEmail" class="form-control" placeholder="importar arquivo" required autofocus>
+        </div>
+        <label class="mt-3 h5 mb-6 font-weight-normal" style="color: rebeccapurple;">
+            KMX, convertendo em 1 piscar de olhos as suas coordenadas.
+            <br><hr>Ferramenta Compatível com :  <b> Google Earth, Google Mapas e Excel </b> <br><br>
+        </label>
     </div>
 
-    <div class="form-label-group">
-        <input type="file" name="file" id="inputEmail" class="form-control" placeholder="importar arquivo required autofocus">
-    </div>
-
-    <div class="checkbox mb-3">
-    </div>
-
-    <label class="h5 mb-6 font-weight-normal" style="color: rebeccapurple;">
-        KMX, convertendo em 1 piscar de olhos as suas coordenadas.
-        <br><hr>Ferramenta Compatível com :  <b> Google Earth, Google Mapas e Excel </b> <br><br>
-    </label>
-    <button class="btn btn-lg btn-primary btn-block" type="submit" style="background-color:white; color: rebeccapurple; border: solid;" asp-action="" >Converter</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" style="background-color:white; color: rebeccapurple; border: solid;" asp-action="">Converter</button>
     <p class="mt-5 mb-3 text-muted text-center">&copy; 2024</p>
 </form>
-<link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css"> <a id="robbu-whatsapp-button" target="_blank" href="https://api.whatsapp.com/send?phone=556782100953&text=Seja%20bem%20vindo"> <div class="rwb-tooltip">Fale com nosso Suporte</div> <img src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg"> </a>
+
+<!-- WhatsApp Button -->
+<link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
+<a id="robbu-whatsapp-button" target="_blank" href="https://api.whatsapp.com/send?phone=556782100953&text=Seja%20bem%20vindo">
+    <div class="rwb-tooltip">Fale com nosso Suporte</div>
+    <img src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg">
+</a>
+
+<!-- Include Bootstrap CSS and JS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- Trigger Button for YouTube Video Popup -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#youtubeModal">Ver Tutorial</button>
+
+<!-- YouTube Video Modal -->
+<div id="youtubeModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">KMX Convert Tutorial</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/y3aufOEfdhw" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
