--- a/APP.KMX/Views/Home/Error.cshtml
+++ b/APP.KMX/Views/Home/Error.cshtml
@@ -3,34 +3,19 @@
     ViewData["Title"] = "Error";
 }
 
-@* <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2> *@
-
 @if (Model.ShowRequestId)
 {
     <p>
-        @* <strong>Request ID:</strong> <code>@Model.RequestId</code> *@
         <img src="/img/mensagem_erro.png" alt="mensagem-erro" width="100%" height="100%" onclick="redirectToHome()" />
     </p>
 }
+<button onclick="redirectToHome()">Clique para retornar a pagina inicial</button>
 
-<h3 asp-controller="Home"
-    asp-action="Index">
-    
-</h3>
-@* <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
- *@
+
 @section Scripts {
     <script type="text/javascript">
-        function redirectToHome() {
+        function redirectToHome() 
+        {
             window.location.href = '@Url.Action("Index", "Home")';
         }
     </script>
