Ajustes de Responsividade

--- a/APP.KMX/Views/Shared/_Form.cshtml
+++ b/APP.KMX/Views/Shared/_Form.cshtml
@@ -6,11 +6,11 @@
     <input type="hidden" id="actionUrl" name="actionUrl"  />
 
     <div class="text-center mb-6">
-        <div class="mb-6">
+        <div class="mb-6 pb-2">
             <input type="file" name="file" id="inputEmail" class="form-control" placeholder="importar arquivo" required autofocus>
         </div>
     </div>
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit" style="background-color:white; color: rebeccapurple; border: solid;">Converter</button>
+    <button class="btn btn-lg btn-primary btn-block " type="submit" style="background-color:white; color: rebeccapurple; border: solid;">Converter</button>
     <p class="mt-5 mb-3 text-muted text-center">&copy; 2024</p>
 </form>
