--- a/APP.KMX/Views/Home/Index.cshtml
+++ b/APP.KMX/Views/Home/Index.cshtml
@@ -1,25 +1,36 @@
 ﻿@model IEnumerable<CardModel>
 
-    @{
-        ViewData["Title"] = "KMX, convertendo em 1 piscar de olhos as suas coordenadas.";
-    }
+@{
+    ViewData["Title"] = "KMX, convertendo em 1 piscar de olhos as suas coordenadas.";
+}
 
     <!-- Include Bootstrap CSS and JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<style>
+    body {
+        padding-top: 825px; /* Adjust the value as needed */
+    }
+</style>
+ 
 
+<div>
     <div class="text-center mb-6">
         <img class="mb-6" src="/img/logokmx.jpeg" alt="" width="300" height="300">
-        <h1 class="h3 mb-6 font-weight-normal"><b>KMX Convert</b></h1>
-    </div>
+        <h1 class="h3 mb-2 font-weight-normal"><b>KMX Convert</b></h1>
 
-    <div class="text-center mb-6">
-        <label class="mt-3 h5 mb-6 font-weight-normal" style="color: rebeccapurple;">
+        <label class="mt-3 h5 font-weight-normal" style="color: rebeccapurple;">
             KMX, convertendo em 1 piscar de olhos as suas coordenadas.
             <br><hr>Ferramenta Compatível com :  <b> Google Earth, Google Mapas e Excel </b> <br><br>
         </label>
+    </div>
+
+    <div class="text-center mb-6">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/y3aufOEfdhw" allowfullscreen></iframe>
+        </div>
 
         <div class="container">
             <div class="row">
@@ -29,39 +40,37 @@
                 }
             </div>
         </div>
+
+        <!-- Render the form initially hidden -->
+        <div id="formContainer" class="d-none">
+            @Html.Partial("_Form")
+        </div>
+
+        <!-- WhatsApp Button -->
+        @Html.Partial("_MailButton")
+
+        <!-- YouTube Video Modal -->
+        @Html.Partial("_YoutubeModal")
     </div>
+</div>
+    
 
-    <!-- Render the form initially hidden -->
-    <div id="formContainer" class="d-none">
-        @Html.Partial("_Form")
-    </div>
 
-    <!-- WhatsApp Button -->
-    @Html.Partial("_MailButton")
+<script>
+    function showForm(actionUrl) {
+        // Show the form
+        var formContainer = document.getElementById('formContainer');
+        formContainer.classList.remove('d-none');
 
-    <!-- YouTube Video Modal -->
-    @Html.Partial("_YoutubeModal")
+        // Set the action URL
+        var dynamicForm = document.getElementById('dynamicForm');
+        dynamicForm.action = actionUrl;
+    }
 
-    <script>
-        function showForm(actionUrl) {
-            // Show the form
-            console.log("A action e: ",actionUrl)
-            var formContainer = document.getElementById('formContainer');
-            formContainer.classList.remove('d-none');
-            console.log(formContainer);
-
-            // Set the action URL
-            var dynamicForm = document.getElementById('dynamicForm');
-            dynamicForm.action = actionUrl;
-            console.log(actionUrl);
-        }
-
-        function submitForm() {
-            var form = document.querySelector('form');
-            console.log(form);
-            var actionUrl = document.getElementById('actionUrl').value;
-            console.log(actionUrl)
-            form.action = actionUrl;
-            return true;
-        }
-    </script>
+    function submitForm() {
+        var form = document.querySelector('form');
+        var actionUrl = document.getElementById('actionUrl').value;
+        form.action = actionUrl;
+        return true;
+    }
+</script>
