--- a/APP.KMX/Views/Shared/_Card.cshtml
+++ b/APP.KMX/Views/Shared/_Card.cshtml
@@ -6,14 +6,16 @@
             <img src="@Model.ImageUrl" alt="@Model.Title" class="img-fluid">
             <h5 class="card-title">@Model.Title</h5>
             <p class="card-text">@Model.Text</p>
-            @if(Model.ShowForm)
-            {
-                <button type="button" class="btn btn-primary" onclick="showForm('@Url.Action(Model.ActionName, Model.ControllerName)')">Selecionar</button>
-            }
-            else{
-                <a href="@Url.Action(Model.ActionName, Model.ControllerName)" class="btn btn-primary">Selecionar</a>
-            }
-           @*  <a href="@Url.Action(Model.ActionName, Model.ControllerName)" class="btn btn-primary">Selecionar</a> *@
+            <div id="formContainer-@Model.Title.Replace(" ", "-")">
+                @if (Model.ShowForm)
+                {
+                    <button type="button" class="btn btn-primary" onclick="loadForm('@Url.Action(Model.ActionName, Model.ControllerName)', '@Model.Title.Replace(" ", "-")')">Selecionar</button>
+                }
+                else
+                {
+                    <a href="@Url.Action(Model.ActionName, Model.ControllerName)" class="btn btn-primary">Selecionar</a>
+                }
+            </div>
         </div>
     </div>
 </div>
