--- a/APP.KMX/Views/Home/Index.cshtml
+++ b/APP.KMX/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
             KMX, convertendo em 1 piscar de olhos as suas coordenadas.
             <br><hr>Ferramenta Compatível com :  <b> Google Earth, Google Mapas e Excel </b> <br><br>
         </label>
-    </div>
+    </div> 
 
     <div class="text-center mb-6">
         <div class="embed-responsive embed-responsive-16by9 mb-3">
@@ -38,15 +38,15 @@
                     @Html.Partial("_Card", card)
                 }
             </div>
-        </div>
+        </div> 
 
-@*         <!-- Render the form initially hidden -->
+        <!-- Render the form initially hidden -->
         <div id="formContainer" class="d-none">
             @Html.Partial("_Form")
-        </div> *@
+        </div>
 
         <!-- WhatsApp Button -->
-        @Html.Partial("_MailButton")
+         @Html.Partial("_MailButton")
 
         <!-- YouTube Video Modal -->
         @Html.Partial("_YoutubeModal")
