--- a/APP.KMX/Views/Shared/_Layout.cshtml
+++ b/APP.KMX/Views/Shared/_Layout.cshtml
@@ -15,39 +15,38 @@
     <!-- Custom styles for this template -->
     <link href="~/css/floating-labels.css" rel="stylesheet">
 </head>
+
 <body>
-    @*<header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">APP.KMX</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+    <div>
+        <header>
+            <div class="header-container">
+                <div class="logo">
+                    <a href="/"><img src="~/Content/Images/logokmx.jpeg" alt="KMX Convert" /></a>
+                </div>
+                <nav class="navbar">
+                    <ul class="nav-menu">
+                        <li><a href="/">Início</a></li>
+                        <li><a href="/planos">Planos</a></li>
+                        <li><a href="/ferramentas">Ferramentas</a></li>
+                        <li><a href="/links">Links</a></li>
                     </ul>
+                </nav>
+                <div class="header-buttons">
+                    <a href="/account/login" class="btn login-btn">Entrar</a>
+                    <a href="/account/register" class="btn register-btn">Cadastre-se</a>
                 </div>
             </div>
-        </nav>
-    </header>*@
-    <div class="container">
-        <main role="main" class="pb-3">
+        </header>
+        @* <main role="main" class="pb-3">
             @RenderBody()
-        </main>
+        </main> *@
     </div>
 
-    @*<footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - APP.KMX - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>*@
+    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
