--- a/APP.KMX.App/Views/Shared/_Layout.cshtml
+++ b/APP.KMX.App/Views/Shared/_Layout.cshtml
@@ -67,6 +67,8 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - APP.KMX.App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - APP.KMX.App - <a asp-area="" asp-controller="Home" asp-action="FileConversion">FileConversion</a>
+            &copy; 2024 - APP.KMX.App - <a asp-area="" asp-controller="Account" asp-action="Login">FileConversion</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -74,7 +76,11 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
+
+
+
 <style>
     .register-button{
         /* Button */
