Implementacao dos metodos de conversao

--- a/APP.KMX.App/Views/Account/Login.cshtml
+++ b/APP.KMX.App/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
             </div>
 
         </div>
-        <div class="esquecer-criar">
+        <div class="esquecer-criar justify-content-between">
             <div class="esquecer-criar">
                 <div>Esqueceu sua Senha?</div>
             </div>
@@ -45,10 +45,10 @@
         </div>
 
         <div>
-            <button class="login-google" > <img src="./img/button-icons/google-icon.svg"/>Continue com Google</button>
+            <button class="login-google" > <img src="/img/button-icons/google-icon.svg"/> Continue com Google</button>
         </div>
         <div>
-            <button class="login-facebook"> Continue com Facebook</button>
+            <button class="login-facebook"> <img src="/img/button-icons/facebook-icon.svg" /> Continue com Facebook</button>
         </div>
        
        
