--- a/APP.KMX.App/Views/Shared/_Layout.cshtml
+++ b/APP.KMX.App/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item p-2">
-                            <a class="nav-link active" aria-current="page" href="#">Início</a>
+                            <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link" aria-current="page">Início</a>
                         </li>
                         <li class="nav-item p-2">
                             <a class="nav-link" href="#">Planos</a>
@@ -51,10 +51,10 @@
                             </ul>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="nav-link" href="#">Entrar</a>
+                            <a asp-area="" asp-controller="Account" asp-action="Login" class="nav-link">Entrar</a>
                         </li>
                         <li class="nav-item p-2 register-button " >
-                            <a class="nav-link register-text color-white" href="#">Cadastre-se</a>
+                            <a class="nav-link register-text color-white" href="#" style="color: white;">Cadastre-se</a>
                         </li>
                     </ul>
                 </div>
@@ -70,8 +70,6 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - APP.KMX.App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            &copy; 2024 - APP.KMX.App - <a asp-area="" asp-controller="Home" asp-action="FileConversion">FileConversion</a>
-            &copy; 2024 - APP.KMX.App - <a asp-area="" asp-controller="Account" asp-action="Login">FileConversion</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
