--- a/APP.KMX.App/wwwroot/css/site.css
+++ b/APP.KMX.App/wwwroot/css/site.css
@@ -27,6 +27,7 @@ body {
 }
 
 .login-google {
+    font-size: 18px;
     width: 446px;
     height: 56px;
     background: #FFFFFF;
@@ -36,6 +37,7 @@ body {
 }
 
 .login-facebook {
+    font-size:18px;
     width: 446px;
     height: 56px;
     background: #FFFFFF;
@@ -47,10 +49,12 @@ body {
 .esquecer-criar {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .login-button {
+    color:white;
+    font-size:20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
