Commit de paginas atualizadas

--- a/APP.KMX.App/Views/Account/Login.cshtml
+++ b/APP.KMX.App/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
 
             <div >
                 <p> Senha</p>
-                @Html.TextBoxFor(a => a.Password, new { @class = "text-input" })
+                @Html.TextBoxFor(a => a.Password, new { @class = "text-input password" })
             </div>
 
             <div class="form-check" style="padding-top: 10px; padding-bottom: 10px;">
