--- a/APP.KMX.App/Views/Home/FileConversion.cshtml
+++ b/APP.KMX.App/Views/Home/FileConversion.cshtml
@@ -24,7 +24,7 @@
 
                 <div class="drag-n-drop">
                     <img src="/img/file-upload-icon.svg" alt="File Upload" />
-                    CRIAR O DRAG N DROP AQUI
+                    SELECIONE SEU ARQUIVO
                     <p>Sao permitidos arquivos com no maximo <strong>10MB</strong></p>
                 </div>
                 <p>Formatos aceitos: .xls .kml .kmz</p>
