--- a/APP.KMX.App/Views/Home/Index.cshtml
+++ b/APP.KMX.App/Views/Home/Index.cshtml
@@ -40,7 +40,10 @@
 
     </div>
     <div>
+        <a asp-controller ="Planos" asp-action="Index" class="nav-link">
+
         <img class="pro-plan"src="img/banner-plano-pro.svg" alt="Plano Pro" />
+            </a>
     </div>
 </div>
 
