--- a/APP.KMX.App/Views/Shared/_Layout.cshtml
+++ b/APP.KMX.App/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link" aria-current="page">Início</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="nav-link" href="#">Planos</a>
+                            <a asp-controller="Planos" asp-action="Index" class="nav-link">Planos</a>
                         </li>
                         <li class="nav-item p-2 dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" href="#">Ferramentas</a>
