--- a/APP.KMX.App/Views/Shared/_Layout.cshtml
+++ b/APP.KMX.App/Views/Shared/_Layout.cshtml
@@ -15,6 +15,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> *@
 </head>
 
+@{
+    var cardList = new List<ConversionButtonModel>
+            {
+                new ConversionButtonModel { Title = "Ponto de coordenadas .xls para .kmz", IconClass = "xls-green.svg", Link = "/Home/FileConversion", ConvertFrom=".xls", ConvertTo = ".kmz" },
+                new ConversionButtonModel { Title = "Pontos de coordenadas .kmz ou .kml para .xls", IconClass = "kmz-purple.svg", Link = "/Home/FileConversion", ConvertFrom = ".kmz ", ConvertTo = ".xls" },
+                new ConversionButtonModel { Title = "Calcular distância entre vários pontos .xls para .kmz", IconClass = "xls-yellow.svg", Link = "/Home/FileConversion",ConvertFrom=".xls", ConvertTo = ".kmz" },
+                new ConversionButtonModel { Title = "Calcular distância entre vários pontos .kmz para .xls", IconClass = "xls-blue.svg", Link = "/Home/FileConversion" },
+                new ConversionButtonModel { Title = "Criar rotas em endereço .xls para .kmz", IconClass = "xls-purple.svg", Link = "/Home/FileConversion", ConvertFrom=".xls", ConvertTo = ".kmz" },
+                new ConversionButtonModel { Title = "Criar rotas em endereço .kmz para .kml", IconClass = "kml-purple.svg", Link = "/Home/FileConversion", ConvertFrom=".xls", ConvertTo = ".kml" },
+            };
+
+}
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 position-fixed w-100">
@@ -37,11 +49,17 @@
                         <li class="nav-item p-2 dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" href="#">Ferramentas</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Item 1</a></li>
-                                <li><a class="dropdown-item" href="#">Item 2</a></li>
+                                <div class="container d-flex flex-row overflow-scroll" style="max-height:75vh; max-width:650px;" >
+                                    @foreach (var card in cardList)
+                                    {
+                                        @Html.Partial("_ConversionButton", card);
+                                    }
+                                </div>
+                                @* <li><a class="dropdown-item" href="#">Item 1</a></li>
+                                <li><a class="dropdown-item" href="#">Item 2</a></li> *@
                             </ul>
                         </li>
-                        <li class="nav-item p-2 dropdown">
+                       @*  <li class="nav-item p-2 dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Links
                             </a>
@@ -49,12 +67,12 @@
                                 <li><a class="dropdown-item" href="#">Item 1</a></li>
                                 <li><a class="dropdown-item" href="#">Item 2</a></li>
                             </ul>
-                        </li>
+                        </li> *@
                         <li class="nav-item p-2">
                             <a asp-area="" asp-controller="Account" asp-action="Login" class="nav-link">Entrar</a>
                         </li>
                         <li class="nav-item p-2 register-button " >
-                            <a class="nav-link register-text color-white" href="#" style="color: white;">Cadastre-se</a>
+                            <a asp-area="" asp-controller="Account" asp-action="RegisterPage" class="nav-link register-text color-white" style="color: white;">Cadastre-se</a>
                         </li>
                     </ul>
                 </div>
