--- a/APP.KMX.App/wwwroot/css/site.css
+++ b/APP.KMX.App/wwwroot/css/site.css
@@ -26,6 +26,24 @@ body {
     margin: 0;
 }
 
+.create-account-card {
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 56px 49px;
+    gap: 27px;
+    width: 546px;
+    height: auto;
+    background: #FFFFFF;
+    box-shadow: 3px 7px 30px rgba(112, 144, 176, 0.15);
+    border-radius: 24px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
+
 .login-google {
     font-size: 18px;
     width: 446px;
@@ -69,6 +87,27 @@ body {
     order: 3;
     align-self: stretch;
     flex-grow: 0;
+}
+
+.login-button-disabled {
+    color: #590D82;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 32px;
+    gap: 10px;
+    width: 448px;
+    height: 56px;
+    background: #EEE7F3;
+    border-radius: 30px;
+    flex: none;
+    order: 3;
+    align-self: stretch;
+    flex-grow: 0;
+    opacity: 50%;
+    border:hidden
 }
 
 .text-area {
